2006-11-01  Vivien Malerba <malerba@gnome-db.org>

	* AUTHORS: added Daniel Espinosa
	* gda-sharp/gda-api.raw: applied a patch by Daniel Espinosa to
	update the C# bindings
	* providers/msql/gda-msql-provider.c:
	* providers/msql/msql_specs_dsn.xml.in: improved the Msql provider
	* providers/firebird/gda-firebird-recordset.c: make compilation with Firebird2
	work
	
2006-10-30  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: bumped to 1.99.2
	* providers/msql:
	* providers/sybase: make these providers compile again
	* doc/C/libgda-docs.sgml: updated providers' status
	* autogen.sh: make sure we call bash because edgy uses dash

2006-10-26  Vivien Malerba <malerba@gnome-db.org>

	Released 1.99.1 (AKA 2.0 Beta3).

2006-10-26  Vivien Malerba <malerba@gnome-db.org>

	* providers/bdb/Makefile.am:
	* providers/firebird/Makefile.am:
	* providers/freetds/Makefile.am:
	* providers/ibmdb2/Makefile.am:
	* providers/ldap/Makefile.am:
	* providers/mdb/Makefile.am:
	* providers/msql/Makefile.am:
	* providers/mysql/Makefile.am:
	* providers/odbc/Makefile.am:
	* providers/oracle/Makefile.am:
	* providers/postgres/Makefile.am:
	* providers/sqlite/Makefile.am:
	* providers/sybase/Makefile.am:
	* providers/xbase/Makefile.am: applied a patch by Marc-Andre Lureau
	to fix #362898
	* configure.in: added a --enable-csharp option to enable or disable
	the building of C# bindings
	* gda-sharp/Makefile.am: packaging corrections and now "make distcheck" works
	* libgda/gda-query.[ch]: changed the returned value of gda_query_execute()

2006-10-21  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-connection.h:
	* libgda/gda-data-model-iter.h:
	* libgda/gda-data-model-query.h:
	* libgda/gda-data-proxy.h:
	* libgda/gda-dict-aggregate.h:
	* libgda/gda-dict-constraint.h:
	* libgda/gda-dict-database.h:
	* libgda/gda-dict-field.h:
	* libgda/gda-dict-function.h:
	* libgda/gda-dict-table.h:
	* libgda/gda-dict-type.h:
	* libgda/gda-dict.h:
	* libgda/gda-object-ref.h: